# openai-agents-sdk-samples

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
figures/: chatbot_gradio_queue.xcf  tools_human_with_gradio.xcf
notebools/: GradioChatBot.ipynb
shells/: copy_http_ca_cert.sh  generate_es_password.sh  login_verification.sh
src/: chatbot_gradio.py  chatbot_gradio_queue.py  customer_service.py  dynamic_system_prompt.py  handoffs.py  hello.py  lifecycle_example.py  mcp_elasticsearch.py  mcp_filesystem.py  mcp_yfinance.py  mlflow_trace.py  streaming.py  tools.py  tools_agents_as_tools.py  tools_custom.py  tools_human_with_gradio.py  tools_human_with_stdio.py  tools_websearch.py  visualize.py  voice_chat.py
src/examples/agent_patterns/: deterministic.py  forcing_tool_use.py  input_guardrails.py  llm_as_a_judge.py  output_guardrails.py  routing.py
src/examples/basic/: agent_lifecycle_example.py  dynamic_system_prompt.py  lifecycle_example.py  stream_items.py  stream_text.py  tools.py
src/examples/customer_service/: main.py
src/examples/financial_research_agent/: manager.py
src/examples/financial_research_agent/agents/: financials_agent.py  planner_agent.py  risk_agent.py  (+2 more)
src/examples/handoffs/: message_filter.py  message_filter_streaming.py
src/examples/model_providers/: custom_example_agent.py  custom_example_global.py  custom_example_provider.py
src/examples/research_bot/: manager.py
src/examples/tools/: computer_use.py  file_search.py  web_search.py
src/sample_files/: favorite_books.txt  favorite_cities.txt  favorite_songs.txt
(+5 files in other folders)
