[project]
name = "test-openai-agensts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.21.0",
    "numpy>=2.2.4",
    "openai-agents[voice]>=0.0.6",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
]
